--- a/NineX.theme.css
+++ b/NineX.theme.css
@@ -10,7 +10,7 @@
  * @donate https://ko-fi.com/saltssaumure
 */
 
-@import url("https://saltssaumure.github.io/w9x-discord-theme/w9x.min.css");
+@import url("https://github.com/moxie-coder/w9x-discord-theme/blob/main/scss/w9x.scss");
 
 /* See https://github.com/Saltssaumure/w9x-discord-theme#customisation for customisation settings. */
 :root {
